--- a/lib/core/localization/es.json
+++ b/lib/core/localization/es.json
@@ -185,16 +185,6 @@
   "study_modes_good_luck": "¡Buena Suerte!",
   "study_modes_empty": "La lista seleccionada para la prueba está vacía. No se puede realizar.",
   "load_failed_try_again_button_label": "Inténtalo de nuevo",
-  "tutorial_done": "¡Empezar!",
-  "tutorial_skip": "Saltar Tutorial",
-  "tutorial_kanlist": "¡Bienvenido a KanPractice!\n\nEn esta app podrás crear tus propias listas de vocabulario y ver tu progreso detalladamente mientras mejoras tu japonés a base de práctica y tests.",
-  "tutorial_dictionary": "En el Diccionario, haciendo uso de algoritmos de Inteligencia Artificial, podrás dibujar kanji que desconozcas y formar palabras con ellos para buscarlos en Jisho.org.",
-  "tutorial_market": "Este es el mercado, donde podrás descargar listas de otros usuarios y subir tus listas para que otros se las descarguen. Para esto debes estar registrado en KanPractice.",
-  "tutorial_lists": "Esta es la vista detalle de una lista. Aquí verás todas las palabras incluidas en la lista con colores, denotando su nota individual. Podrás practicar o hacer tests de escritura, lectura, reconocimiento, escucha o habla.",
-  "tutorial_details": "Al pulsar en una palabra se podrá ver la propia palabra con todos sus datos: lectura (con opción a escucharla con TTS), opción para ver datos extra de la palabra con Jisho.org, significado, estadísticas en referencia a los tipos de aprendizaje y fecha de creación.",
-  "tutorial_jisho": "Junto con Jisho.org, se extraen distintos datos del kanji o palabra para facilitar el aprendizaje del mismo con ejemplos en frases, on'yomi, kun'yomi y vídeo del trazado.\n\nDesde el Diccionario, al buscar palabras nuevas, se mostrará esta página y podrás añadir la palabra a tus listas de estudio directamente.",
-  "tutorial_practicing": "Al practicar o hacer tests, tendrás que validar cada palabra o caracter para denotar la nota de la propia palabra. El conjunto de estas notas es la que determina la nota total de tus listas. El método de validación varía entre modos de apredizaje: escritura, lectura, reconocimiento, escucha o habla.",
-  "tutorial_options": "Hay más opciones en los Ajustes, ¡asegúrate de probarlas!\n\n¡Empecemos!",
   "jisho_no_match": "No se ha podido encontrar ninguna coincidencia en jisho.org",
   "jisho_resultData_jlpt": "JLPT",
   "jisho_resultData_strokes": "Trazos",
@@ -236,21 +226,22 @@
   "dict_search_button_title": "Buscar",
   "dict_predictions_most_likely": "Más probable",
   "dict_predictions_less_likely": "Menos probable",
-  "dict_predictions_disclaimer": "La función de búsqueda utiliza algoritmos de Machine Learning y las predicciones pueden no corresponderse con lo que hayas dibujado. Si las predicciones no son acertadas, intenta dibujar el kanji otra vez.",
   "dict_jisho_add_kanji_bottom_sheet_title": "Selecciona una KanList para añadir la palabra y clasifícala",
   "dict_jisho_add_kanji_label": "Añadir a KanList",
   "dict_jisho_create_kanji_list": "Crear nueva KanList",
   "dict_add_kanji_title": "Dibujar palabra",
   "dict_model_not_loaded": "No se ha podido cargar el modelo :(",
-  "coach_tutorial_kanlists_1": "Aquí se muestran las listas de vocabulario creadas por ti (estas son listas de vocabulario de muestra). En una lista recién creada, deberás incluir las palabras que quieras acorde a una temática definida por ti.",
+  "coach_tutorial_kanlists_1": "¡Bienvenido a KanPractice!\n\nEn esta app podrás crear tus propias listas de vocabulario y ver tu progreso detalladamente mientras mejoras tu japonés a base de práctica y tests.\n\nAquí se muestran las listas de vocabulario creadas por ti (estas son listas de vocabulario de muestra). En una lista recién creada, deberás incluir las palabras que quieras acorde a una temática definida por ti.",
   "coach_tutorial_kanlists_2": "Puedes tocar aquí para ver todas tus listas o carpetas. Puedes crear carpetas para agrupar las listas con el fin de clasificarlas y ordenarlas en tu estudio.\n\nPor ejemplo, es posible que quieras almacenar todas tus listas de las lecciones de Mina No Nihongo o Genki en una sola carpeta",
-  "coach_tutorial_kanlists_3": "Estas son las diferentes acciones que puedes realizar (de izquierda a derecha):\n\n- Visualizar tus listas de vocabulario.\n\n- Añadir una nueva lista tanto al mercado como a tus propias listas Y realizar un test. Puedes crear las listas por lecciones de un libro, temática, dificultad...\n\nSi quieres eliminar una lista, dejala pulsada y aparecerá un diálogo para realizar dicha acción.\n\n-Acceso al mercado, donde podrás descargar listas de vocabulario que han creado y subido otros usuarios.",
-  "coach_tutorial_kanlists_4": "Cuando encuentres palabras que no conozcas, podrás buscarlas mediante el diccionario y añadirlas directamente a tus listas.",
+  "coach_tutorial_kanlists_3": "Visualizar tus listas de vocabulario.",
+  "coach_tutorial_kanlists_4": "Buscar palabras que no conozcas mediante el diccionario y añadirlas directamente a tus listas.",
+  "coach_tutorial_kanlists_5": "Añadir una nueva lista tanto al mercado como a tus propias listas Y realizar un test. Puedes crear las listas por lecciones de un libro, temática, dificultad...\n\nSi quieres eliminar una lista, dejala pulsada y aparecerá un diálogo para realizar dicha acción.",
+  "coach_tutorial_kanlists_6": "Acceso al mercado, donde podrás descargar listas de vocabulario que han creado y subido otros usuarios.",
+  "coach_tutorial_kanlists_7": "Por último, los ajustes donde podrás ver tus estadísticas y cambiar otras funciones.",
   "coach_tutorial_detail_1": "Aquí se muestra todo el vocabulario de la lista. Podrás añadir más en cualquier momento a medida que tu estudio avance.\n\nCada vez que practiques en una área (escritura por ejemplo), el vocabulario se actualizará mostrando el porcentaje de acierto de la misma.",
-  "coach_tutorial_detail_2": "Añade más vocabulario que veas por la calle, estudiando, leyendo, en videojuegos o anime pulsando aquí.\n\nPodrás crear palabras añadiendo su pronunciación y su significado.",
-  "coach_tutorial_detail_3": "Aquí están las acciones suplementarias. Podrás realizar un test Blitz solamente de esta lista de vocabulario (medio) o añadir esta lista a una carpeta determinada.\n\nAl practicar, se usa la repetición espaciada: cuando fallas el estudio de una palabra, esta saldrá más adelante en tu práctica.",
-  "coach_tutorial_detail_4": "Por último, si pulsas aquí, podrás cambiar el nombre de la lista, por si te has equivocado o cambiado de opinión con respecto a la temática o categorización elegida.",
-  "settings_general_statistics": "Estadísticas Generales",
+  "coach_tutorial_detail_2": "Aquí están las acciones suplementarias. Podrás realizar un test Blitz solamente de esta lista de vocabulario (izquierda), añadir esta lista a una carpeta determinada (centro) o añadir más vocabulario a la lista que veas por la calle, estudiando, leyendo, en videojuegos o anime.\n\nAl practicar, se usa la repetición espaciada: cuando fallas el estudio de una palabra, esta saldrá más adelante en tu práctica.",
+  "coach_tutorial_detail_3": "Por último, si pulsas aquí, podrás cambiar el nombre de la lista, por si te has equivocado o cambiado de opinión con respecto a la temática o categorización elegida.",
+  "settings_general_statistics": "Estadísticas",
   "stats_words": "Número Total de Palabras",
   "stats_tests": "Número Total de Tests",
   "stats_words_lists": "Listas",
@@ -366,5 +357,16 @@
   "stats_tests_total_acc": "Acierto Total por Modo de Estudio",
   "stats_tests_tap_to_specs": "Toca las barras para conocer más detalles de cada tipo de test",
   "folder_practice_title": "Practicar con un subconjunto de palabras de las listas de esta carpeta.",
-  "disclaimer_spatial_repetition": "La práctica se basa en el aprendizaje por repetición espaciada. Este método se aplica de tal manera que las palabras que falles durante la práctica, volverán a aparecer al terminar todo el repaso (hasta que las aciertes). Esto estimula el aprendizaje y mejora la memorización del vocabulario."
+  "disclaimer_spatial_repetition": "La práctica se basa en el aprendizaje por repetición espaciada. Este método se aplica de tal manera que las palabras que falles durante la práctica, volverán a aparecer al terminar todo el repaso (hasta que las aciertes). Esto estimula el aprendizaje y mejora la memorización del vocabulario.",
+  "settings_general_kanji_list": "Agrupar estadísticas por palabra",
+  "settings_general_kanji_list_description": "Cuando se activa, todas las palabras de las KanLists mostrarán la media de todos los modos de estudio en lugar de mostrar uno por uno",
+  "tests": "Tests",
+  "specific_test_accuracy_label": "Tasa de Acierto en Test",
+  "success": "Tasa de Acierto",
+  "words_by_category": "Número Total de Palabras por Categoría",
+  "history_tests_header": "Acierto Total de Tests en las Fechas Seleccionadas",
+  "date_picker_helper": "Selecciona un Periodo",
+  "date_picker_start_hint": "Fecha Inicial",
+  "date_picker_end_hint": "Fecha Final",
+  "date_picker_save": "Guardar"
 }
