--- a/lib/core/localization/de.json
+++ b/lib/core/localization/de.json
@@ -185,16 +185,6 @@
   "study_modes_good_luck": "Viel Glück!",
   "study_modes_empty": "Die für den Test ausgewählte Liste ist leer. Kann Test nicht durchführen.",
   "load_failed_try_again_button_label": "Erneut versuchen",
-  "tutorial_done": "Start!",
-  "tutorial_skip": "Tutorial überspringen",
-  "tutorial_kanlist": "Willkommen bei KanPractice!\n\nIn dieser App können Sie Ihre eigenen Vokabellisten erstellen und Ihre Fortschritte im Detail sehen, während Sie Ihr Japanisch durch Übungen und Tests verbessern.",
-  "tutorial_dictionary": "Im Wörterbuch können Sie mithilfe von Algorithmen der künstlichen Intelligenz Kanji zeichnen, die Sie nicht kennen, und mit ihnen Wörter bilden, um sie in Jisho.org nachzuschlagen.",
-  "tutorial_market": "Dies ist der Markt, auf dem Sie Listen von anderen Nutzern herunterladen und Ihre eigenen Listen hochladen können, damit andere sie herunterladen können. Dazu müssen Sie bei KanPractice registriert sein.",
-  "tutorial_lists": "Dies ist die Detailansicht einer Liste. Hier sehen Sie alle in der Liste enthaltenen Wörter in Farbe, was ihre individuelle Punktzahl angibt. Sie können Schreib-, Lese-, Erkennungs-, Hör- und Sprachtests durchführen oder ablegen.",
-  "tutorial_details": "Wenn Sie auf ein Wort klicken, können Sie das Wort selbst mit all seinen Daten sehen: Lesung (mit der Option, es mit Text to Speech anzuhören), Option, um zusätzliche Daten des Wortes bei Jisho.org zu sehen, Bedeutung, Statistiken in Bezug auf die Lerntypen und das Erstellungsdatum",
-  "tutorial_jisho": "Zusammen mit Jisho.org werden verschiedene Daten des Kanji oder des Wortes extrahiert, um das Lernen des Wortes mit Beispielen in Sätzen, on'yomi, kun'yomi und Stroke Video zu erleichtern.\n\nWenn Sie im Wörterbuch nach neuen Wörtern suchen, wird diese Seite angezeigt und Sie können das gesuchte Wort direkt zu Ihren Lernlisten hinzufügen.",
-  "tutorial_practicing": "Wenn Sie üben oder Tests machen, müssen Sie jedes Wort oder Zeichen validieren, um die Note des Wortes selbst zu bezeichnen. Die Gesamtpunktzahl Ihrer Listen ergibt sich aus der Summe dieser Punktzahlen. Die Methode der Validierung ist je nach Lernmodus unterschiedlich: Schreiben, Lesen, Erkennen, Hören oder Sprechen",
-  "tutorial_options": "Es gibt noch mehr Optionen in den Einstellungen, also probieren Sie sie aus!\n\nBeginnen wir!",
   "jisho_no_match": "Konnte keine Übereinstimmung in jisho.org finden",
   "jisho_resultData_jlpt": "JLPT",
   "jisho_resultData_strokes": "Anschläge",
@@ -236,21 +226,22 @@
   "dict_search_button_title": "Suchen",
   "dict_predictions_most_likely": "Höchstwahrscheinlich",
   "dict_predictions_less_likely": "Weniger wahrscheinlich",
-  "dict_predictions_disclaimer": "Die Suchfunktion verwendet Algorithmen des maschinellen Lernens und die Vorhersagen stimmen möglicherweise nicht mit dem überein, was Sie zeichnen. Wenn die Vorhersagen nicht genau sind, versuchen Sie, das Kanji erneut zu zeichnen.",
   "dict_jisho_add_kanji_bottom_sheet_title": "Wählen Sie eine KanList, um das Wort hinzuzufügen und es klassifizieren",
   "dict_jisho_add_kanji_label": "Zu KanList hinzufügen",
   "dict_jisho_create_kanji_list": "Neue KanListe erstellen",
   "dict_add_kanji_title": "Wort malen",
   "dict_model_not_loaded": "Modell konnte nicht geladen werden :(",
-  "coach_tutorial_kanlists_1": "Hier sind die von Ihnen erstellten Vokabellisten (es handelt sich um Beispielvokabellisten). In eine neu erstellte Liste sollten Sie die Wörter aufnehmen, die Sie nach einem von Ihnen festgelegten Thema benötigen.",
+  "coach_tutorial_kanlists_1": "Willkommen bei KanPractice!\n\nIn dieser App können Sie Ihre eigenen Vokabellisten erstellen und Ihre Fortschritte im Detail sehen, während Sie Ihr Japanisch durch Übungen und Tests verbessern.\n\nHier sind die von Ihnen erstellten Vokabellisten (es handelt sich um Beispielvokabellisten). In eine neu erstellte Liste sollten Sie die Wörter aufnehmen, die Sie nach einem von Ihnen festgelegten Thema benötigen.",
   "coach_tutorial_kanlists_2": "Sie können hier tippen, um alle Ihre Listen oder Ordner anzuzeigen. Vielleicht möchten Sie Ordner erstellen, um die Listen zu gruppieren, damit Sie sie weiter klassifizieren und ordnen können.\n\nZum Beispiel könnten Sie alle Ihre Listen aus den Mina No Nihongo oder Genki Lektionen in einem einzigen Ordner speichern.",
-  "coach_tutorial_kanlists_3": "Dies sind die verschiedenen Aktionen, die Sie durchführen können (von links nach rechts):\n\n- Ihre Vokabellisten ansehen.\n\n- Eine neue Liste sowohl zum Markt als auch zu Ihren eigenen Listen hinzufügen UND einen Test machen. Sie können die Listen nach Lektionen eines Buches, Thema, Schwierigkeitsgrad usw. erstellen.\n\nWenn Sie eine Liste löschen möchten, lassen Sie sie gedrückt und ein Dialog erscheint, um diese Aktion durchzuführen.\n\n-Zugang zum Markt, wo Sie Vokabellisten herunterladen können, die von anderen Benutzern erstellt und hochgeladen wurden",
-  "coach_tutorial_kanlists_4": "Wenn du auf Wörter stößt, die du nicht kennst, kannst du sie im Wörterbuch nachschlagen und sie direkt zu deinen Listen hinzufügen",
+  "coach_tutorial_kanlists_3": "Ihre Vokabellisten ansehen",
+  "coach_tutorial_kanlists_4": "Wörter, die Sie nicht kennen, mit Hilfe des Wörterbuchs nachschlagen und sie direkt zu Ihren Listen hinzufügen.",
+  "coach_tutorial_kanlists_5": "Eine neue Liste sowohl zum Markt als auch zu Ihren eigenen Listen hinzufügen UND einen Test machen. Sie können die Listen nach Lektionen eines Buches, Thema, Schwierigkeitsgrad... erstellen.\n\nWenn Sie eine Liste löschen möchten, lassen Sie die Taste gedrückt und es erscheint ein Dialog, um diese Aktion durchzuführen.",
+  "coach_tutorial_kanlists_6": "Zugang zum Marktplatz, wo Sie von anderen Benutzern erstellte und hochgeladene Vokabellisten herunterladen können.",
+  "coach_tutorial_kanlists_7": "Schließlich die Einstellungen, wo Sie Ihre Statistiken einsehen und andere Funktionen ändern können",
   "coach_tutorial_detail_1": "Hier werden alle Vokabeln aus der Liste angezeigt. Sie können im Laufe Ihres Studiums jederzeit mehr hinzufügen.\n\nJedes Mal, wenn Sie in einem Bereich (z. B. Schreiben) üben, wird das Vokabular aktualisiert und der Prozentsatz des Erfolgs in diesem Bereich angezeigt.",
-  "coach_tutorial_detail_2": "Fügen Sie weitere Vokabeln hinzu, die Sie auf der Straße, beim Lernen, Lesen, in Videospielen oder Anime sehen, indem Sie hier klicken.\n\n Sie können Wörter erstellen, indem Sie ihre Aussprache und Bedeutung hinzufügen.",
-  "coach_tutorial_detail_3": "Hier sind die ergänzenden Aktionen. Sie können einen Blitztest nur mit dieser Vokabelliste machen oder die Liste zu einem bestimmten Ordner hinzufügen.\n\nBeim Üben wird die räumliche Wiederholung verwendet: alle Wörter, die Sie nicht lernen, werden im weiteren Verlauf der Übung wieder auftauchen.",
-  "coach_tutorial_detail_4": "Wenn Sie hier klicken, können Sie schließlich den Namen der Liste ändern, falls Sie einen Fehler gemacht oder Ihre Meinung über das gewählte Thema oder die Kategorisierung geändert haben.",
-  "settings_general_statistics": "Allgemeine Statistik",
+  "coach_tutorial_detail_2": "Hier sind die zusätzlichen Aktionen. Sie können einen Blitztest dieser Vokabelliste machen (links), die Liste zu einem bestimmten Ordner hinzufügen (Mitte) oder weitere Vokabeln zu Ihrer Liste hinzufügen, wenn Sie sie auf der Straße, beim Lernen, beim Lesen, in Videospielen oder Animes sehen.\n\nBeim Üben wird die räumliche Wiederholung verwendet: alle Vokabeln, die Sie nicht lernen, werden im weiteren Verlauf der Übung wieder auftauchen.",
+  "coach_tutorial_detail_3": "Wenn Sie hier klicken, können Sie schließlich den Namen der Liste ändern, falls Sie einen Fehler gemacht oder Ihre Meinung über das gewählte Thema oder die Kategorisierung geändert haben.",
+  "settings_general_statistics": "Statistik",
   "stats_words": "Gesamtzahl der Wörter",
   "stats_tests": "Gesamtzahl der Tests",
   "stats_words_lists": "Listen",
@@ -366,5 +357,16 @@
   "stats_tests_total_acc": "Gesamt-Genauigkeit nach Studienmodus",
   "stats_tests_tap_to_specs": "Tippen Sie auf die Balken, um mehr Details für jeden Testtyp zu sehen",
   "folder_practice_title": "Üben Sie mit einer Teilmenge von Wörtern aus den Listen in diesem Ordner.",
-  "disclaimer_spatial_repetition": "Die Übung basiert auf dem Lernen durch räumliche Wiederholung. Diese Methode wird so angewandt, dass Wörter, die Sie beim Üben übersehen haben, am Ende der gesamten Prüfung wieder auftauchen (bis Sie sie richtig können). Dies fördert das Lernen und verbessert das Einprägen von Vokabeln"
+  "disclaimer_spatial_repetition": "Die Übung basiert auf dem Lernen durch räumliche Wiederholung. Diese Methode wird so angewandt, dass Wörter, die Sie beim Üben übersehen haben, am Ende der gesamten Prüfung wieder auftauchen (bis Sie sie richtig können). Dies fördert das Lernen und verbessert das Einprägen von Vokabeln",
+  "settings_general_kanji_list": "Gruppenstatistiken nach Wort",
+  "settings_general_kanji_list_description": "Wenn diese Funktion aktiviert ist, wird bei allen KanLists-Wörtern der Mittelwert über alle Studienmodi hinweg angezeigt, anstatt zwischen ihnen zu wechseln.",
+  "tests": "Tests",
+  "specific_test_accuracy_label": "Erfolgsquote beim Test",
+  "success": "Erfolgsquote",
+  "words_by_category": "Gesamtzahl der Wörter nach Kategorie",
+  "history_tests_header": "Gesamterfolg der Tests an den gewählten Daten",
+  "date_picker_helper": "Wählen Sie einen Bereich",
+  "date_picker_start_hint": "Anfangsdatum",
+  "date_picker_end_hint": "Enddatum",
+  "date_picker_save": "Speichern"
 }
