--- a/lib/core/localization/en.json
+++ b/lib/core/localization/en.json
@@ -185,16 +185,6 @@
   "study_modes_good_luck": "Good Luck!",
   "study_modes_empty": "The list selected for the test is empty. Cannot perform test.",
   "load_failed_try_again_button_label": "Try again",
-  "tutorial_done": "Start!",
-  "tutorial_skip": "Skip Tutorial",
-  "tutorial_kanlist": "Welcome to KanPractice!\n\nIn this app you can create your own vocabulary lists and see your progress in detail as you improve your Japanese through practice and tests.",
-  "tutorial_dictionary": "In the Dictionary, using Artificial Intelligence algorithms, you will be able to draw kanji you don't know and form words with them to look them up in Jisho.org.",
-  "tutorial_market": "This is the market, where you can download lists from other users and upload your lists for others to download. For this you must be registered in KanPractice.",
-  "tutorial_lists": "This is the detail view of a list. Here you will see all the words included in the list with colors, denoting their individual grade. You will be able to practice or take writing, reading, recognition, listening or speaking tests.",
-  "tutorial_details": "By clicking on a word you will be able to see the word itself with all its data: reading (with option to listen to it with TTS), option to see extra data of the word with Jisho.org, meaning, statistics in reference to learning types and creation date.",
-  "tutorial_jisho": "Together with Jisho.org, different data of the kanji or word is extracted to facilitate the learning of the word with examples in sentences, on'yomi, kun'yomi and stroke video.\n\nFrom the Dictionary, when searching for new words, this page will show up and you will be able to add the searched word to your study lists directly",
-  "tutorial_practicing": "When practicing or doing tests, you will have to validate each word or character to denote the note of the word itself. It is the aggregate of these scores that determines the total score of your lists. The method of validation varies between learning modes: writing, reading, recognition, listening or speaking.",
-  "tutorial_options": "There are more options in the Settings, be sure to try them out!\n\nLet's begin!",
   "jisho_no_match": "Could not find any match in jisho.org",
   "jisho_resultData_jlpt": "JLPT",
   "jisho_resultData_strokes": "Strokes",
@@ -236,21 +226,22 @@
   "dict_search_button_title": "Search",
   "dict_predictions_most_likely": "Most likely",
   "dict_predictions_less_likely": "Less likely",
-  "dict_predictions_disclaimer": "Search function uses Machine Learning algorithms and the predictions may not be aligned with what you draw. If the predictions are not accurate, try drawing the kanji again.",
   "dict_jisho_add_kanji_bottom_sheet_title": "Select a KanList to add the word and classify it",
   "dict_jisho_add_kanji_label": "Add to KanList",
   "dict_jisho_create_kanji_list": "Create a new KanList",
   "dict_add_kanji_title": "Draw word",
   "dict_model_not_loaded": "Could not load model :(",
-  "coach_tutorial_kanlists_1": "Here are the vocabulary lists created by you (these are sample vocabulary lists). In a newly created list, you should include the words you want according to a theme defined by you.",
+  "coach_tutorial_kanlists_1": "Welcome to KanPractice!\n\nIn this app you can create your own vocabulary lists and see your progress in detail as you improve your Japanese through practice and tests.\n\nHere are the vocabulary lists created by you (these are sample vocabulary lists). In a newly created list, you should include the words you want according to a theme defined by you.",
   "coach_tutorial_kanlists_2": "You can tap here in order to view all your lists or folders. You can create folders to group lists for further classification and order in your study.\n\nFor example, you might want to store all your lists from the Mina No Nihongo or Genki lessons in one single folder.",
-  "coach_tutorial_kanlists_3": "These are the different actions you can perform (from left to right):\n\n- View your vocabulary lists.\n\n- Add a new list to the market as well as to your own lists. You can create lists by lessons of a book, subject, difficulty...\n\nIf you want to delete a list, leave it pressed and a dialog will appear to perform this action.\n\n-Access to the market, where you can download vocabulary lists created and uploaded by other users",
-  "coach_tutorial_kanlists_4": "When you find words you don't know, you can look them up in the dictionary and add them directly to your lists.",
+  "coach_tutorial_kanlists_3": "View your vocabulary lists.",
+  "coach_tutorial_kanlists_4": "Look up words you don't know using the dictionary and add them directly to your lists.",
+  "coach_tutorial_kanlists_5": "Add a new list both to the market and to your own lists AND take a test. You can create the lists by lessons of a book, subject, difficulty...\n\nIf you want to delete a list, leave it pressed and a dialog will appear to perform this action.",
+  "coach_tutorial_kanlists_6": "Access to the market, where you can download vocabulary lists that have been created and uploaded by other users.",
+  "coach_tutorial_kanlists_7": "Finally, the settings where you can view your statistics and change other functions.",
   "coach_tutorial_detail_1": "All the vocabulary in the list is displayed here. You can add more at any time as your study progresses.\n\nEach time you practise in an area (e.g. writing), the vocabulary will be updated showing the percentage of success in that area.",
-  "coach_tutorial_detail_2": "Add more vocabulary you see on the street, studying, reading, video games or anime by clicking here.\n\nYou can create words by adding their pronunciation and meaning.",
-  "coach_tutorial_detail_3": "Here are the supplementary actions. You can do a Blitz test of this vocabulary list only or add the list to a certain folder.\n\nWhen practicing, spatial repetition is used: all the words that you fail to study, will appear again further in the practice.",
-  "coach_tutorial_detail_4": "Finally, if you click here, you will be able to change the name of the list, in case you have made a mistake or changed your mind about the chosen subject or categorisation.",
-  "settings_general_statistics": "General Statistics",
+  "coach_tutorial_detail_2": "Here are the supplementary actions. You can do a Blitz test of this vocabulary list (left), add the list to a certain folder (center) or add more vocabulary to your list when you see it on the street, studying, reading, video games or anime.\n\nWhen practicing, spatial repetition is used: all the words that you fail to study, will appear again further in the practice.",
+  "coach_tutorial_detail_3": "Finally, if you click here, you will be able to change the name of the list, in case you have made a mistake or changed your mind about the chosen subject or categorisation.",
+  "settings_general_statistics": "Statistics",
   "stats_words": "Total Number of Words",
   "stats_tests": "Total Number of Tests",
   "stats_words_lists": "Lists",
@@ -366,5 +357,16 @@
   "stats_tests_total_acc": "Total Accuracy by Study Mode",
   "stats_tests_tap_to_specs": "Tap on the bars to see more details for each test type",
   "folder_practice_title": "Practice with a subset of words of the lists within this folder.",
-   "disclaimer_spatial_repetition": "The practice is based on learning by spaced repetition. This method is applied in such a way that the words you miss during practice, will reappear at the end of the entire review (until you get them right). This stimulates learning and improves vocabulary memorization."
+  "disclaimer_spatial_repetition": "The practice is based on learning by spaced repetition. This method is applied in such a way that the words you miss during practice, will reappear at the end of the entire review (until you get them right). This stimulates learning and improves vocabulary memorization.",
+  "settings_general_kanji_list": "Group statistics by word",
+  "settings_general_kanji_list_description": "When active, all KanLists words will show the mean accross all study modes instead of swipping between them",
+  "tests": "Tests",
+  "specific_test_accuracy_label": "Success Rate on Test",
+  "success": "Success Rate",
+  "words_by_category": "Total Numbers of Words by Category",
+  "history_tests_header": "Total Success of Tests on the Chosen Dates",
+  "date_picker_helper": "Choose a Range",
+  "date_picker_start_hint": "Initial Date",
+  "date_picker_end_hint": "End Date",
+  "date_picker_save": "Save"
 }
