--- a/lib/core/localization/es.json
+++ b/lib/core/localization/es.json
@@ -354,7 +354,7 @@
   "daily_test_cannot_go_back": "Estás haciendo un test diario. Termina el test, ¡tú puedes!",
   "settings_notifications_label": "Activar/Desactivar Notificaciones",
   "stats_tests_by_type": "Número Total de Tests por Tipo",
-  "stats_tests_total_acc": "Acierto Total por Modo de Estudio",
+  "stats_tests_total_acc": "Tasa de Acierto por Modo de Estudio",
   "stats_tests_tap_to_specs": "Toca las barras para conocer más detalles de cada tipo de test",
   "folder_practice_title": "Practicar con un subconjunto de palabras de las listas de esta carpeta.",
   "disclaimer_spatial_repetition": "La práctica se basa en el aprendizaje por repetición espaciada. Este método se aplica de tal manera que las palabras que falles durante la práctica, volverán a aparecer al terminar todo el repaso (hasta que las aciertes). Esto estimula el aprendizaje y mejora la memorización del vocabulario.",
@@ -364,9 +364,16 @@
   "specific_test_accuracy_label": "Tasa de Acierto en Test",
   "success": "Tasa de Acierto",
   "words_by_category": "Número Total de Palabras por Categoría",
-  "history_tests_header": "Acierto Total de Tests en las Fechas Seleccionadas",
+  "history_tests_header": "Acierto Total de Tests basados en Filtros",
   "date_picker_helper": "Selecciona un Periodo",
   "date_picker_start_hint": "Fecha Inicial",
   "date_picker_end_hint": "Fecha Final",
-  "date_picker_save": "Guardar"
+  "date_picker_save": "Guardar",
+  "history_tests_filter": "Filtros",
+  "all_filter": "Todos",
+  "filter_select_dates_label": "Rango de fechas",
+  "filter_select_test_type_label": "Tipo de test",
+  "filter_select_study_mode_label": "Modo de estudio",
+  "filter_apply": "Aplicar"
+
 }
