--- a/lib/core/localization/es.json
+++ b/lib/core/localization/es.json
@@ -361,7 +361,7 @@
   "settings_general_kanji_list": "Agrupar estadísticas por palabra",
   "settings_general_kanji_list_description": "Cuando se activa, todas las palabras de las KanLists mostrarán la media de todos los modos de estudio en lugar de mostrar uno por uno",
   "tests": "Tests",
-  "specific_test_accuracy_label": "Tasa de Acierto en Test",
+  "specific_accuracy_label": "Tasa de Acierto Total",
   "success": "Tasa de Acierto",
   "words_by_category": "Número Total de Palabras por Categoría",
   "history_tests_header": "Acierto Total de Tests basados en Filtros",
