--- a/lib/core/localization/de.json
+++ b/lib/core/localization/de.json
@@ -354,7 +354,7 @@
   "daily_test_cannot_go_back": "Sie führen gerade einen täglichen Test durch. Beenden Sie den Test, Sie können es schaffen!",
   "settings_notifications_label": "Aktivieren/Deaktivieren von Benachrichtigungen",
   "stats_tests_by_type": "Gesamtzahl der Tests nach Typ",
-  "stats_tests_total_acc": "Gesamt-Genauigkeit nach Studienmodus",
+  "stats_tests_total_acc": "Gesamtgenauigkeit der Tests nach Studienmodus",
   "stats_tests_tap_to_specs": "Tippen Sie auf die Balken, um mehr Details für jeden Testtyp zu sehen",
   "folder_practice_title": "Üben Sie mit einer Teilmenge von Wörtern aus den Listen in diesem Ordner.",
   "disclaimer_spatial_repetition": "Die Übung basiert auf dem Lernen durch räumliche Wiederholung. Diese Methode wird so angewandt, dass Wörter, die Sie beim Üben übersehen haben, am Ende der gesamten Prüfung wieder auftauchen (bis Sie sie richtig können). Dies fördert das Lernen und verbessert das Einprägen von Vokabeln",
@@ -364,7 +364,7 @@
   "specific_accuracy_label": "Gesamtgenauigkeitsquote",
   "success": "Erfolgsquote",
   "words_by_category": "Gesamtzahl der Wörter nach Kategorie",
-  "history_tests_header": "Gesamtgenauigkeit der Tests auf der Grundlage von Filtern",
+  "history_tests_header": "Testverlauf Treffer",
   "date_picker_helper": "Wählen Sie einen Bereich",
   "date_picker_start_hint": "Anfangsdatum",
   "date_picker_end_hint": "Enddatum",
