--- a/lib/core/localization/es.json
+++ b/lib/core/localization/es.json
@@ -354,17 +354,17 @@
   "daily_test_cannot_go_back": "Estás haciendo un test diario. Termina el test, ¡tú puedes!",
   "settings_notifications_label": "Activar/Desactivar Notificaciones",
   "stats_tests_by_type": "Número Total de Tests por Tipo",
-  "stats_tests_total_acc": "Tasa de Acierto por Modo de Estudio",
+  "stats_tests_total_acc": "Acierto de Tests por Modo de Estudio",
   "stats_tests_tap_to_specs": "Toca las barras para conocer más detalles de cada tipo de test",
   "folder_practice_title": "Practicar con un subconjunto de palabras de las listas de esta carpeta.",
   "disclaimer_spatial_repetition": "La práctica se basa en el aprendizaje por repetición espaciada. Este método se aplica de tal manera que las palabras que falles durante la práctica, volverán a aparecer al terminar todo el repaso (hasta que las aciertes). Esto estimula el aprendizaje y mejora la memorización del vocabulario.",
   "settings_general_kanji_list": "Agrupar estadísticas por palabra",
   "settings_general_kanji_list_description": "Cuando se activa, todas las palabras de las KanLists mostrarán la media de todos los modos de estudio en lugar de mostrar uno por uno",
   "tests": "Tests",
-  "specific_accuracy_label": "Tasa de Acierto Total",
-  "success": "Tasa de Acierto",
+  "specific_accuracy_label": "Acierto Total",
+  "success": "Acierto",
   "words_by_category": "Número Total de Palabras por Categoría",
-  "history_tests_header": "Acierto Total de Tests basados en Filtros",
+  "history_tests_header": "Acierto del Histórico de Tests",
   "date_picker_helper": "Selecciona un Periodo",
   "date_picker_start_hint": "Fecha Inicial",
   "date_picker_end_hint": "Fecha Final",
