--- a/lib/core/localization/de.json
+++ b/lib/core/localization/de.json
@@ -354,19 +354,25 @@
   "daily_test_cannot_go_back": "Sie führen gerade einen täglichen Test durch. Beenden Sie den Test, Sie können es schaffen!",
   "settings_notifications_label": "Aktivieren/Deaktivieren von Benachrichtigungen",
   "stats_tests_by_type": "Gesamtzahl der Tests nach Typ",
-  "stats_tests_total_acc": "Gesamt-Genauigkeit nach Studienmodus",
+  "stats_tests_total_acc": "Gesamtgenauigkeit der Tests nach Studienmodus",
   "stats_tests_tap_to_specs": "Tippen Sie auf die Balken, um mehr Details für jeden Testtyp zu sehen",
   "folder_practice_title": "Üben Sie mit einer Teilmenge von Wörtern aus den Listen in diesem Ordner.",
   "disclaimer_spatial_repetition": "Die Übung basiert auf dem Lernen durch räumliche Wiederholung. Diese Methode wird so angewandt, dass Wörter, die Sie beim Üben übersehen haben, am Ende der gesamten Prüfung wieder auftauchen (bis Sie sie richtig können). Dies fördert das Lernen und verbessert das Einprägen von Vokabeln",
   "settings_general_kanji_list": "Gruppenstatistiken nach Wort",
   "settings_general_kanji_list_description": "Wenn diese Funktion aktiviert ist, wird bei allen KanLists-Wörtern der Mittelwert über alle Studienmodi hinweg angezeigt, anstatt zwischen ihnen zu wechseln.",
   "tests": "Tests",
-  "specific_test_accuracy_label": "Erfolgsquote beim Test",
+  "specific_accuracy_label": "Gesamtgenauigkeitsquote",
   "success": "Erfolgsquote",
   "words_by_category": "Gesamtzahl der Wörter nach Kategorie",
-  "history_tests_header": "Gesamterfolg der Tests an den gewählten Daten",
+  "history_tests_header": "Testverlauf Treffer",
   "date_picker_helper": "Wählen Sie einen Bereich",
   "date_picker_start_hint": "Anfangsdatum",
   "date_picker_end_hint": "Enddatum",
-  "date_picker_save": "Speichern"
+  "date_picker_save": "Speichern",
+  "history_tests_filter": "Filter",
+  "all_filter": "Alle",
+  "filter_select_dates_label": "Datumsbereich",
+  "filter_select_test_type_label": "Testart",
+  "filter_select_study_mode_label": "Studienmodus",
+  "filter_apply": "Anwenden"
 }
