--- a/lib/core/localization/en.json
+++ b/lib/core/localization/en.json
@@ -354,19 +354,25 @@
   "daily_test_cannot_go_back": "You are performing a daily test. Finish the test, you can do it!",
   "settings_notifications_label": "Enable/Disable Notifications",
   "stats_tests_by_type": "Total Number of Tests by Type",
-  "stats_tests_total_acc": "Total Accuracy by Study Mode",
+  "stats_tests_total_acc": "Total Accuracy of Tests by Study Mode",
   "stats_tests_tap_to_specs": "Tap on the bars to see more details for each test type",
   "folder_practice_title": "Practice with a subset of words of the lists within this folder.",
   "disclaimer_spatial_repetition": "The practice is based on learning by spaced repetition. This method is applied in such a way that the words you miss during practice, will reappear at the end of the entire review (until you get them right). This stimulates learning and improves vocabulary memorization.",
   "settings_general_kanji_list": "Group statistics by word",
   "settings_general_kanji_list_description": "When active, all KanLists words will show the mean accross all study modes instead of swipping between them",
   "tests": "Tests",
-  "specific_test_accuracy_label": "Success Rate on Test",
-  "success": "Success Rate",
+  "specific_accuracy_label": "Total Accuracy",
+  "success": "Accuracy",
   "words_by_category": "Total Numbers of Words by Category",
-  "history_tests_header": "Total Success of Tests on the Chosen Dates",
+  "history_tests_header": "Tests History Accuracy",
   "date_picker_helper": "Choose a Range",
   "date_picker_start_hint": "Initial Date",
   "date_picker_end_hint": "End Date",
-  "date_picker_save": "Save"
+  "date_picker_save": "Save",
+  "history_tests_filter": "Filters",
+  "all_filter": "All",
+  "filter_select_dates_label": "Date range",
+  "filter_select_test_type_label": "Test type",
+  "filter_select_study_mode_label": "Study mode",
+  "filter_apply": "Apply"
 }
