--- a/lib/presentation/core/localization/de.json
+++ b/lib/presentation/core/localization/de.json
@@ -348,7 +348,7 @@
   "abbr_test_mode_daily": "Täglich",
   "daily_test_bottom_sheet_title": "Einen täglichen Test durchführen",
   "daily_test_bottom_sheet_load_failed": "Es konnte keine Liste erfasst werden. Versuchen Sie es später erneut.",
-  "daily_test_description": "Führen Sie einen täglichen Test in einem zufälligen Modus (Schreiben, Lesen, Hören, Erkennen oder Sprechen) mit einer geordneten Kombination von Wörtern durch, um Ihr Lernen zu stärken.\n\nSie können diesen Test jederzeit wiederholen, aber Sie können ihn nicht beenden, sondern müssen ihn zu Ende bringen!",
+  "daily_test_description": "Führen Sie einen täglichen Test durch, bei dem die Wörter auf der Grundlage der Korrektheit der vergangenen täglichen Tests sortiert werden (basierend auf dem SM2-Algorithmus).\n\nFühren Sie diesen Test täglich durch, um sich besser zu erinnern.",
   "daily_test_start_button": "Start",
   "daily_test_start_button_tr": "始める",
   "daily_test_cannot_go_back": "Sie führen gerade einen täglichen Test durch. Beenden Sie den Test, Sie können es schaffen!",
