6 buttons for validation instead of 4 - WIP Writing

--- a/lib/presentation/core/localization/de.json
+++ b/lib/presentation/core/localization/de.json
@@ -129,10 +129,12 @@
   "kanji_lists_newUpdateAvailable_label": "Neue Version!",
   "kanji_lists_load_failed": "Fehler beim Abrufen der Listen.",
   "kanji_lists_empty": "Keine verfügbaren Listen.\n\nErstellen Sie neue Listen für Ihre Studie, indem Sie auf '+' tippen, oder importieren Sie sie aus Ihrem Backup.",
-  "done_button_label": "Fertig!",
+  "done_button_label": "Fertig!", 
   "perfect_button_label": "Perfekt",
-  "mid_perfect_button_label": "Gut",
-  "mid_wrong_button_label": "Teilweise",
+  "mid_perfect_button_label": "Fast",
+  "mid_good_button_label": "Gut",
+  "mid_button_label": "Teilweise",
+  "mid_wrong_button_label": "Schlecht",
   "wrong_button_label": "Falsch",
   "developer_info_label": "Entwickler-Informationen",
   "developer_info_follow": "@gabrielglbh auf GitHub",
@@ -348,7 +350,7 @@
   "abbr_test_mode_daily": "Täglich",
   "daily_test_bottom_sheet_title": "Einen täglichen Test durchführen",
   "daily_test_bottom_sheet_load_failed": "Es konnte keine Liste erfasst werden. Versuchen Sie es später erneut.",
-  "daily_test_description": "Führen Sie einen täglichen Test durch, bei dem die Wörter auf der Grundlage der Korrektheit der vergangenen täglichen Tests sortiert werden (basierend auf dem SM2-Algorithmus).\n\nFühren Sie diesen Test täglich durch, um sich besser zu erinnern.",
+  "daily_test_description": "Einen Test durchführen, bei dem die Wörter auf der Grundlage der Korrektheit der vergangenen täglichen Tests sortiert werden. Führen Sie diesen Test täglich durch, um sich besser zu erinnern.",
   "daily_test_start_button": "Start",
   "daily_test_start_button_tr": "始める",
   "daily_test_cannot_go_back": "Sie führen gerade einen täglichen Test durch. Beenden Sie den Test, Sie können es schaffen!",
