--- a/lib/presentation/core/localization/es.json
+++ b/lib/presentation/core/localization/es.json
@@ -131,9 +131,11 @@
   "kanji_lists_empty": "No hay listas disponibles.\n\nCrea nuevas listas para tu estudio pulsando en '+' o importalas desde tu copia de seguridad.",
   "done_button_label": "¡Hecho!",
   "perfect_button_label": "Perfecto",
-  "mid_perfect_button_label": "Bien",
-  "mid_wrong_button_label": "Parcial",
-  "wrong_button_label": "Mal",
+  "mid_perfect_button_label": "Casi perfecto",
+  "mid_good_button_label": "Bien",
+  "mid_button_label": "Parcial",
+  "mid_wrong_button_label": "Mal",
+  "wrong_button_label": "Erróneo",
   "developer_info_label": "Info del Desarrollador",
   "developer_info_follow": "@gabrielglbh en GitHub",
   "developer_info_report": "Reportar errores a",
@@ -348,7 +350,7 @@
   "abbr_test_mode_daily": "Diario",
   "daily_test_bottom_sheet_title": "Hacer un test diario",
   "daily_test_bottom_sheet_load_failed": "No se ha podido hacer ninguna lista. Prueba de nuevo más tarde.",
-  "daily_test_description": "Realiza un test diario en el que las palabras saldrán ordenadas en base al acierto de tests diarios pasados (Basado en el algoritmo SM2).\n\nRealiza este test a diario para una mayor memorización.",
+  "daily_test_description": "Realiza un test en el que las palabras saldrán ordenadas en base al acierto de tests diarios pasados. Haz este test a diario para una mayor memorización.",
   "daily_test_start_button": "Empezar",
   "daily_test_start_button_tr": "始める",
   "daily_test_cannot_go_back": "Estás haciendo un test diario. Termina el test, ¡tú puedes!",
