--- a/lib/presentation/core/localization/es.json
+++ b/lib/presentation/core/localization/es.json
@@ -378,5 +378,7 @@
   "filter_select_study_mode_label": "Modo de estudio",
   "filter_apply": "Aplicar",
   "settings_general_repetition_toggle": "Activar Repetición Espaciada en Tests",
-  "settings_general_repetition_sub": "Cuando se activa, al hacer un test, las palabras que falles volverán a aparecer al final del mismo para practicarlas. El acierto no se actualizará al practicar."
+  "settings_general_repetition_sub": "Cuando se activa, al hacer un test, las palabras que falles volverán a aparecer al final del mismo para practicarlas. El acierto no se actualizará al practicar.",
+  "clear_canvas": "Limpiar",
+  "back_canvas": "Atrás"
 }
