--- a/lib/presentation/core/localization/en.json
+++ b/lib/presentation/core/localization/en.json
@@ -378,5 +378,7 @@
   "filter_select_study_mode_label": "Study mode",
   "filter_apply": "Apply",
   "settings_general_repetition_toggle": "Enable Spaced Repetition in Tests",
-  "settings_general_repetition_sub": "When enabled, when taking a test, the words you fail will reappear at the end of the test for practice. The accuracy will not be updated when practicing."
+  "settings_general_repetition_sub": "When enabled, when taking a test, the words you fail will reappear at the end of the test for practice. The accuracy will not be updated when practicing.",
+  "clear_canvas": "Clear",
+  "back_canvas": "Back"
 }
