--- a/lib/presentation/core/localization/en.json
+++ b/lib/presentation/core/localization/en.json
@@ -106,7 +106,7 @@
   "list_details_load_failed": "Failed to retrieve words",
   "list_details_practice_button_label": "Practice",
   "list_details_practice_button_label_ext": "練習",
-  "list_details_learningMode_spatial": "Spaced Repetition",
+  "list_details_learningMode_spatial": "Fail Repetition",
   "list_details_empty": "No available words.\n\nAdd new words to this list by tapping on '+' or import them from your backup.",
   "list_details_searchBar_hint": "Search by word, meaning, pronunciation",
   "kan_list_tile_createDialogForDeletingKanList_title": "Remove a KanList",
@@ -359,7 +359,7 @@
   "stats_tests_total_acc": "Total Accuracy of Tests by Study Mode",
   "stats_tests_tap_to_specs": "Tap on the bars to see more details for each test type",
   "folder_practice_title": "Practice with a subset of words of the lists within this folder.",
-  "disclaimer_spatial_repetition": "The practice is based on learning by spaced repetition. This method is applied in such a way that the words you miss during practice, will reappear at the end of the entire review (until you get them right). This stimulates learning and improves vocabulary memorization.",
+  "disclaimer_spatial_repetition": "The practice is based on learning by fail repetition. This method is applied in such a way that the words you miss during practice, will reappear at the end of the entire review (until you get them right). This stimulates learning and improves vocabulary memorization.",
   "settings_general_kanji_list": "Group statistics by word",
   "settings_general_kanji_list_description": "When active, all KanLists words will show the mean accross all study modes instead of swipping between them",
   "tests": "Tests",
@@ -377,8 +377,8 @@
   "filter_select_test_type_label": "Test type",
   "filter_select_study_mode_label": "Study mode",
   "filter_apply": "Apply",
-  "settings_general_repetition_toggle": "Enable Spaced Repetition in Tests",
-  "settings_general_repetition_sub": "When enabled, when taking a test, the words you fail will reappear at the end of the test for practice. The accuracy will not be updated when practicing.",
+  "settings_general_repetition_toggle": "Enable Fail Repetition in Tests",
+  "settings_general_repetition_sub": "When enabled the words you fail in a test will reappear at the end for practice. The accuracy will not be updated when practicing. Not applicable in Daily Test.",
   "clear_canvas": "Clear",
   "back_canvas": "Back"
 }
