--- a/lib/presentation/core/localization/es.json
+++ b/lib/presentation/core/localization/es.json
@@ -106,7 +106,7 @@
   "list_details_load_failed": "No se han podido encontrar palabras.",
   "list_details_practice_button_label": "Practicar",
   "list_details_practice_button_label_ext": "練習",
-  "list_details_learningMode_spatial": "Repetición Espaciada",
+  "list_details_learningMode_spatial": "Repetición de Fallos",
   "list_details_empty": "No hay palabras disponibles.\n\nAñade nuevas palabras a esta lista pulsando en '+' o importalas desde tu copia de seguridad.",
   "list_details_searchBar_hint": "Buscar por palabra, significado, pronunciación",
   "kan_list_tile_createDialogForDeletingKanList_title": "Eliminar una KanList",
@@ -359,7 +359,7 @@
   "stats_tests_total_acc": "Acierto de Tests por Modo de Estudio",
   "stats_tests_tap_to_specs": "Toca las barras para conocer más detalles de cada tipo de test",
   "folder_practice_title": "Practicar con un subconjunto de palabras de las listas de esta carpeta.",
-  "disclaimer_spatial_repetition": "La práctica se basa en el aprendizaje por repetición espaciada. Este método se aplica de tal manera que las palabras que falles durante la práctica, volverán a aparecer al terminar todo el repaso (hasta que las aciertes). Esto estimula el aprendizaje y mejora la memorización del vocabulario.",
+  "disclaimer_spatial_repetition": "La práctica se basa en el aprendizaje por repetición de fallos. Este método se aplica de tal manera que las palabras que falles durante la práctica, volverán a aparecer al terminar todo el repaso (hasta que las aciertes). Esto estimula el aprendizaje y mejora la memorización del vocabulario.",
   "settings_general_kanji_list": "Agrupar estadísticas por palabra",
   "settings_general_kanji_list_description": "Cuando se activa, todas las palabras de las KanLists mostrarán la media de todos los modos de estudio en lugar de mostrar uno por uno",
   "tests": "Tests",
@@ -377,8 +377,8 @@
   "filter_select_test_type_label": "Tipo de test",
   "filter_select_study_mode_label": "Modo de estudio",
   "filter_apply": "Aplicar",
-  "settings_general_repetition_toggle": "Activar Repetición Espaciada en Tests",
-  "settings_general_repetition_sub": "Cuando se activa, al hacer un test, las palabras que falles volverán a aparecer al final del mismo para practicarlas. El acierto no se actualizará al practicar.",
+  "settings_general_repetition_toggle": "Activar Repetición de Fallos en Tests",
+  "settings_general_repetition_sub": "Cuando se activa las palabras que falles en un test volverán a aparecer al final para practicarlas. El acierto no se actualizará al practicar. No aplicable en el Test Diario.",
   "clear_canvas": "Limpiar",
   "back_canvas": "Atrás"
 }
