--- a/lib/presentation/core/localization/de.json
+++ b/lib/presentation/core/localization/de.json
@@ -380,5 +380,6 @@
   "settings_general_repetition_toggle": "Fehlerhafte Wiederholungen in Tests aktivieren",
   "settings_general_repetition_sub": "Wenn diese Funktion aktiviert ist, werden die Wörter, die Sie in einem Test nicht bestanden haben, am Ende zum Üben wieder angezeigt. Die Genauigkeit wird beim Üben nicht aktualisiert. Gilt nicht für den täglichen Test.",
   "clear_canvas": "Löschen",
-  "back_canvas": "Zurück"
+  "back_canvas": "Zurück",
+  "settings_enhancements_label": "Erweiterungen"
 }
