--- a/lib/presentation/core/localization/es.json
+++ b/lib/presentation/core/localization/es.json
@@ -380,5 +380,6 @@
   "settings_general_repetition_toggle": "Activar Repetición de Fallos en Tests",
   "settings_general_repetition_sub": "Cuando se activa las palabras que falles en un test volverán a aparecer al final para practicarlas. El acierto no se actualizará al practicar. No aplicable en el Test Diario.",
   "clear_canvas": "Limpiar",
-  "back_canvas": "Atrás"
+  "back_canvas": "Atrás",
+  "settings_enhancements_label": "Mejoras"
 }
