--- a/lib/presentation/core/localization/en.json
+++ b/lib/presentation/core/localization/en.json
@@ -381,5 +381,6 @@
   "settings_general_repetition_sub": "When enabled the words you fail in a test will reappear at the end for practice. The accuracy will not be updated when practicing. Not applicable in Daily Test.",
   "clear_canvas": "Clear",
   "back_canvas": "Back",
-  "settings_enhancements_label": "Enhancements"
+  "settings_enhancements_label": "Enhancements",
+  "pending_review": "Pending daily reviews"
 }
